syntax = "proto3";

package files;

service DbService {
  rpc UploadFileInfo(FileInfo) returns (FileInfoResponse);
  rpc DownloadFileInfo(FileInfoRequest) returns (FileInfo);
  rpc RemoveFileInfo(FileInfoRequest) returns (FileInfoResponse);
}

message FileInfo {
  string file_name = 1;
  int32 file_size = 2;
  string owner = 3;
}

message FileInfoResponse {
  string file_name = 1;
  string message = 2;
}

message FileInfoRequest {
  string file_name = 1;
}
